--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,27 @@ ul {
   margin: 0 auto;
   padding: 0 15px;
 }
+.nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: #322E41;
+  
+}
+.nav__logo {
+  display: flex;
+  align-items: center;
+  padding: 13px 165px;
+   
+ 
+}
+.nav__list {
+  display: flex;
+  gap: 30px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #fff;   
+}
+
+
+
